--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* symbol-browser-control/symbol-browser-cobject.c: (impl_clear): Make
+	it actually do something.
+
 2002-02-03  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* Makefile.am: Added symbol-browser-control back.
