--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * configure.in: Added pt (Portuguese) to ALL_LINGUAS
+
 2002-02-06  JP Rosevear  <jpr@ximian.com>
 
 	* symbol-browser-control/Makefile.am: add "\" to continue
