--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Added Portugues translation by Paulo Silva <paulojjs@yahoo.com>
+
 2001-12-14  Simos Xenitellis  <simos@hellug.gr>
 
 	* el.po: Updated Greek translation.
