--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-23  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* symbol-browser-control/gnome-symbol-browser.xml: Move "FormatUpdate"
+	menuitem to the "View" menu
+
 2002-02-21  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* configure.in, gdl/Makefile.am,
