--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-04-09  Dave Camp  <dave@ximian.com>
+
+	* gdl/gdl-dock-notebook.c (gdl_dock_notebook_bring_to_front): New
+	function.
+
+	* gdl/gdl-dock.c (gdl_dock_bring_to_front): New function.
+
 2002-03-17  JP Rosevear  <jpr@ximian.com>
 
 	* Makefile.am: remove scintilla-control dir reference
