--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-07  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-06-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* vi.po: Added Vietnamese file
