--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-16  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Added Dutch translation (partially).
+
 2002-06-07  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
