--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Updated Vietnamese file
+
 2002-06-16  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Added Dutch translation (partially).
