--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-08  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-07-08  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* POTFILES.in: added missing gdl/layout.glade.  Pointed by Marcel
