--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-28  Christian Neumair  <christian-neumair@web.de>
+
+	* configure.in (ALL_LINGUAS): Added German (de).
+
 2002-06-14  Dave Camp  <dave@ximian.com>
 
 	* configure.in: Applied a patch from Sven Herzberg
