--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-29  Christian Neumair  <christian-neumair@web.de>
+
+	* de.po: Updated German translation.
+
 2002-08-18  Christian Neumair  <christian-neumair@web.de>
 
 	* de.po: Added German translation.
