--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* gdl/gdl-dock-placeholder.h: Added missing G_END_DECLS.
+	* configure.in:
+	* symbol-browser-control/Makefile.am:
+	* symbol-browser-control/pixmaps/Makefile.am: Created Makefile.am
+	for the pixmaps directory.
+
 2002-08-28  Christian Neumair  <christian-neumair@web.de>
 
 	* configure.in (ALL_LINGUAS): Added German (de).
