--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-21  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
+
+	* configure.in: Removed acconfig.h in favor of defining templates
+	in the configure script directly (to conform with autoconf >= 2.52).
+	Changes to make compatible with autoconf 2.13.
+	
 2002-09-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* gdl/gdl-dock-placeholder.h: Added missing G_END_DECLS.
