--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
+
+	* README, NEWS: updated for new release
+
 2002-09-21  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* configure.in: Removed acconfig.h in favor of defining templates
