--- a/README
+++ b/README
@@ -3,17 +3,18 @@ Gnome Devtool Libraries
 
 This package contains components and libraries that are intended to be
 shared between GNOME development tools, including gnome-debug,
-gnome-build, and gIDE.
+gnome-build, and anjuta2.
 
 The current pieces of GDL include:
 
- - A code-editing bonboo component based on the Scintilla
-   widget (scintilla-control).
+ - A symbol browser bonobo component (symbol-browser-control).
+
+ - A docking widget (gdl).
 
  - A utility library that also contains the stubs and skels for
-   the above components (gdl).
+   the symbol browser and text editor components (gdl, idl).
 
-Discussion of GDL development takes place on the
-gnome-devtools@gnome.org mailing list.
+Discussion of GDL development takes place on the gnome-devtools@gnome.org
+mailing list and on #devel-apps at irc.gnome.org.
 
 GDL is licensed under the terms of the GPL.
