--- a/po/vi.po
+++ b/po/vi.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl VERSION\n"
-"POT-Creation-Date: 2002-07-03 08:47+0200\n"
+"POT-Creation-Date: 2002-07-18 18:04-0300\n"
 "PO-Revision-Date: 2002-05-31 21:40+0700\n"
 "Last-Translator: pclouds <pclouds@gmx.net>\n"
 "Language-Team: Gnome-Vi <gnomevi-list@lists.sourceforge.net>\n"
@@ -54,8 +54,8 @@ msgid ""
 "General behavior for the dock item (i.e. whether it can float, if it's "
 "locked, etc.)"
 msgstr ""
-"Ứng xử chung của mục cư trú (VD: nó có thể nổi hay không khi "
-"nó được khoá, v.v...)"
+"Ứng xử chung của mục cư trú (VD: nó có thể nổi hay không khi nó được khoá, v."
+"v...)"
 
 #: gdl/gdl-dock-item.c:278
 msgid "Grip size"
@@ -70,7 +70,8 @@ msgid "Locked"
 msgstr "Được khóa"
 
 #: gdl/gdl-dock-item.c:286
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr "Nếu lập, mục cư trú không thể kéo xung quanh và sẽ không hiện grip"
 
 #: gdl/gdl-dock-item.c:294
@@ -104,8 +105,8 @@ msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
 msgstr ""
-"Đang cố thêm một widget với kiểu %s vào %s, nhưng chỉ có thể chứa một "
-"widget vào một thời điểm, nó đã chứa một widget với kiểu %s"
+"Đang cố thêm một widget với kiểu %s vào %s, nhưng chỉ có thể chứa một widget "
+"vào một thời điểm, nó đã chứa một widget với kiểu %s"
 
 #: gdl/gdl-dock-item.c:1139
 #, c-format
@@ -174,11 +175,11 @@ msgstr "Mục"
 msgid "Name"
 msgstr "Tên"
 
-#: gdl/gdl-dock-layout.c:801
+#: gdl/gdl-dock-layout.c:801 gdl/layout.glade.h:2
 msgid "Dock items"
 msgstr "Mục cư trú"
 
-#: gdl/gdl-dock-layout.c:807
+#: gdl/gdl-dock-layout.c:807 gdl/layout.glade.h:4
 msgid "Saved layouts"
 msgstr "Layout được lưu"
 
@@ -188,8 +189,8 @@ msgid ""
 "While loading layout: don't know how to create a dock object whose nick is '%"
 "s'"
 msgstr ""
-"Trong khi nạp layout: không biết cách tạo đối tượng cư trú, tên người đó là '% "
-"s'"
+"Trong khi nạp layout: không biết cách tạo đối tượng cư trú, tên người đó là "
+"'% s'"
 
 #: gdl/gdl-dock-layout.c:1318
 msgid "Layout managment"
@@ -217,8 +218,8 @@ msgid ""
 "master %p: unable to add object %p[%s] to the hash.  There already is an "
 "item with that name (%p)."
 msgstr ""
-"Chủ chính: %p không thể thêm đối tượng %p[%s] vào một mớ. Đã có một "
-"mục với tên đó (%p)."
+"Chủ chính: %p không thể thêm đối tượng %p[%s] vào một mớ. Đã có một mục với "
+"tên đó (%p)."
 
 #: gdl/gdl-dock-master.c:792
 #, c-format
@@ -263,8 +264,8 @@ msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
-"Gọi tới gdl_dock_object_dock trong đối tượng cư trú %p (kiểu đối tượng là %s) "
-"mà nó đã không thực thi phương pháp này"
+"Gọi tới gdl_dock_object_dock trong đối tượng cư trú %p (kiểu đối tượng là %"
+"s) mà nó đã không thực thi phương pháp này"
 
 #: gdl/gdl-dock-object.c:529
 #, c-format
@@ -272,8 +273,8 @@ msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
-"Chức năng cư trú được yêu cầu trong một đối tượng không giới hạn %p. "
-"Ứng dụng có thể đổ vỡ."
+"Chức năng cư trú được yêu cầu trong một đối tượng không giới hạn %p. Ứng "
+"dụng có thể đổ vỡ."
 
 #: gdl/gdl-dock-object.c:536
 #, c-format
@@ -282,8 +283,10 @@ msgstr "Không thể cư trú %p vào %p vì chúng là của các chủ chính 
 
 #: gdl/gdl-dock-object.c:578
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
-msgstr "Cố rằng buộc %p một đối tượng cư trú hạn định %p (Chủ chính hiện thời là %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgstr ""
+"Cố rằng buộc %p một đối tượng cư trú hạn định %p (Chủ chính hiện thời là %p)"
 
 #: gdl/gdl-dock-paned.c:129
 msgid "Position"
@@ -301,7 +304,8 @@ msgstr "Bám dính"
 msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
-msgstr "Nơi cư trú sẽ bám dính tới chủ của nó hay chuyển thứ bậc khi chủ thôi cư trú"
+msgstr ""
+"Nơi cư trú sẽ bám dính tới chủ của nó hay chuyển thứ bậc khi chủ thôi cư trú"
 
 #: gdl/gdl-dock-placeholder.c:128
 msgid "Host"
@@ -320,8 +324,8 @@ msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
-"Vị trí một mục sẽ được cư trú tới chủ của chúng ta nếu một yêu cầu được "
-"thực hiện để cư trú vào chúng ta"
+"Vị trí một mục sẽ được cư trú tới chủ của chúng ta nếu một yêu cầu được thực "
+"hiện để cư trú vào chúng ta"
 
 #: gdl/gdl-dock-placeholder.c:298
 msgid "Attempt to dock a dock object to an unbound placeholder"
@@ -330,7 +334,9 @@ msgstr "Cố cư trú một đối tượng cư trú vào vào một nơi không
 #: gdl/gdl-dock-placeholder.c:412
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr "Đã nhận tín hiệu tách ra từ một đối tượng (%p) không phải là %p của chủ chúng ta"
+msgstr ""
+"Đã nhận tín hiệu tách ra từ một đối tượng (%p) không phải là %p của chủ "
+"chúng ta"
 
 #: gdl/gdl-dock-placeholder.c:433
 #, c-format
@@ -463,6 +469,24 @@ msgstr "Kiểu mà các mục sẽ được đánh số."
 #, c-format
 msgid "Open %s"
 msgstr "Mở %s"
+
+#: gdl/layout.glade.h:1
+msgid "*"
+msgstr ""
+
+#: gdl/layout.glade.h:3
+#, fuzzy
+msgid "Layout Managment"
+msgstr "Quản lý layout"
+
+#: gdl/layout.glade.h:5
+msgid "_Load"
+msgstr ""
+
+#: gdl/layout.glade.h:6
+#, fuzzy
+msgid "_Lock dock items"
+msgstr "Mục cư trú"
 
 #: symbol-browser-control/GNOME_Development_SymbolBrowser.server.in.h:1
 msgid "Factory for the Gnome Symbol Browser control."
@@ -685,4 +709,3 @@ msgstr "Không thể sơ khởi Bonobo!"
 
 #~ msgid "Replace with:"
 #~ msgstr "Thay bằng:"
-
