--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-23  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* configure.in (ALL_LINGUAS): Added French (fr).
+
 2002-10-29  Jean Schurger <jschurger@schurger.org>
 
 	* configure.in: updated for gdl.spec.in
