--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-23  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Added French translation from
+	Gildas Guillemot <g.guillemot@laposte.net>.
+
 2002-08-29  Christian Neumair  <christian-neumair@web.de>
 
 	* de.po: Updated German translation.
