--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-23  Miloslav Trmac  <mitr@volny.cz>
+
+	* configure.in (ALL_LINGUAS): Added Czech (cs).
+
 2002-11-23  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* configure.in (ALL_LINGUAS): Added French (fr).
