--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-23  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Added Czech translation.
+
 2002-11-23  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Added French translation from
