--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2002-12-27  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* gdl/gdl-icons.c: (gdl_icons_get_property),
+	(gdl_icons_set_property), (gdl_icons_dispose),
+	(gdl_icons_class_init), (gdl_icons_instance_init), (gdl_icons_new),
+	(gdl_icons_get_folder_icon), (gdl_icons_get_uri_icon),
+	(gdl_icons_get_mime_icon): Use the new GnomeIconTheme API.
+	* gdl/gdl-icons.h: New GdlIcons class with dispose handler for cleanup.
+	* symbol-browser-control/symbol-browser.c:
+	(gsb_tree_node_set_pixbuf), (get_image_for_type_key),
+	(gnome_symbol_browser_init), (gnome_symbol_browser_finalize):
+	Uses the new gdl-icons API.
+
 2002-12-23  Miloslav Trmac  <mitr@volny.cz>
 
 	* configure.in (ALL_LINGUAS): Added Czech (cs).
