--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-01  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2002-12-30  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* POTFILES.in: added missing gdl/gdl-icons.c
