--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-02  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Gildas Guillemot <g.guillemot@laposte.net>.
+
 2003-01-01  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
