--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-07  German Poo-Caaman~o <gpoo@ubiobio.cl>
+
+	* configure.in: Added Spanish (es) to ALL_LINGUAS.
+
 2003-01-03  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* configure.in: Update GNOME_REQUIRED to 2.1.0.
