--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-07  German Poo-Caaman~o <gpoo@ubiobio.cl>
+
+	* es.po: Added Spanish translation.
+
 2003-01-03  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
