--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-13  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Removed no longer existing file.
+
 2003-01-07  German Poo-Caaman~o <gpoo@ubiobio.cl>
 
 	* es.po: Added Spanish translation.
