--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Updated Vietnamese file
+
 2003-01-13  Christian Rose  <menthos@menthos.com>
 
 	* .cvsignore: Added more entries.
