--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-23  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2003-01-22  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
