--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in (ALL_LINGUAS): Added "no".
+	
 2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Dutch (nl) to ALL_LINGUAS
