Added am to ALL_LINGUAS.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-24  Daniel Yacob <locales@geez.org>
+
+	* am.po: Added Amharic translation.
+
 2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Added Norwegian translation.
