--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-24  Daniel Yacob <locales@geez.org>
+
+	* configure.in: Added am to ALL_LINGUAS.
+
 2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in (ALL_LINGUAS): Added "no".
