--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-01  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Gildas Guillemot <g.guillemot@laposte.net>.
+
 2003-01-24  Daniel Yacob <locales@geez.org>
 
 	* am.po: Added Amharic translation.
