Updated French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,6 +1,6 @@
 # French translation of gdl.
 # Copyright (C) 2002-2003 Free Software Foundation, Inc.
-# Gildas Guillemot <g.guillemot@laposte.net>, 2002-2003.
+# maintainer: Gildas Guillemot <g.guillemot@laposte.net>, 2002-2003.
 #
 msgid ""
 msgstr ""
