--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-07  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Fixed typos in Czech translation.
+
 2003-02-01  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
