--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-11  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Updated Portuguese translation.
+
 2003-02-07  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Fixed typos in Czech translation.
