--- a/po/es.po
+++ b/po/es.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl\n"
-"POT-Creation-Date: 2003-03-13 20:04+0100\n"
-"PO-Revision-Date: 2003-03-14 00:51+0100\n"
+"POT-Creation-Date: 2003-03-14 19:59+0100\n"
+"PO-Revision-Date: 2003-03-14 23:56+0100\n"
 "Last-Translator: Germán Poo Caamaño <gpoo@ubiobio.cl>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -105,6 +105,8 @@ msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
 msgstr ""
+"Se intentó añadir un widget con tipo %s a un %s, pero éste sólo puede "
+"contener un widget a la vez, ya contiene un widget de tipo %s"
 
 #: gdl/gdl-dock-item.c:1149
 #, c-format
@@ -124,7 +126,7 @@ msgstr "Bloquear"
 #: gdl/gdl-dock-item.c:1404
 #, c-format
 msgid "Attempt to bind an unbound item %p"
-msgstr ""
+msgstr "Se intentó vincular un elemento no vinculable %p"
 
 #: gdl/gdl-dock-layout.c:125
 msgid "Master"
@@ -235,7 +237,7 @@ msgstr "Nombre legible por el humano para el objeto de fijación"
 
 #: gdl/gdl-dock-object.c:135
 msgid "Dock master"
-msgstr ""
+msgstr "Empotrable maestro"
 
 #: gdl/gdl-dock-object.c:136
 msgid "Dock master this dock object is bound to"
@@ -319,7 +321,7 @@ msgstr ""
 
 #: gdl/gdl-dock-tablabel.c:130
 msgid "Controlling dock item"
-msgstr ""
+msgstr "Elemento empotrable de control"
 
 #: gdl/gdl-dock-tablabel.c:131
 msgid "Dockitem which 'owns' this tablabel"
@@ -355,24 +357,24 @@ msgstr ""
 
 #: gdl/gdl-dock.c:208
 msgid "Float X"
-msgstr ""
+msgstr "X Flotante"
 
 #: gdl/gdl-dock.c:209
 msgid "X coordinate for a floating dock"
-msgstr ""
+msgstr "Coordenada X para un empotrable flotante"
 
 #: gdl/gdl-dock.c:216
 msgid "Float Y"
-msgstr ""
+msgstr "Y Flotante"
 
 #: gdl/gdl-dock.c:217
 msgid "Y coordinate for a floating dock"
-msgstr ""
+msgstr "Coordenada Y para un empotrable flotante"
 
 #: gdl/gdl-dock.c:494
 #, c-format
 msgid "Dock #%d"
-msgstr ""
+msgstr "Empotrable #%d"
 
 #: gdl/gdl-recent.c:136
 msgid "GConf key"
